css/pinchard.css
/* ... */
@font-face {
    font-family: 'circular-bold';
    src: url('../fonts/CircularStd-Bold.otf');
}
@font-face {
    font-family: 'courier-new';
    src: url('../fonts/cour.ttf');
}

html,
body {
  height: 100%;
  width: 100%;
}
body {
/*  font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;*/
/*font-family: 'Helvetica Neue', Arial, sans-serif;*/
    font-family: "circular-std";
}
hr {
  border-color: #F05F40;
  border-width: 3px;
  max-width: 50px;
}
hr.light {
  border-color: white;
}
a {
  -webkit-transition: all 0.35s;
  -moz-transition: all 0.35s;
  transition: all 0.35s;
  color: #F05F40;
}
a:hover,
a:focus {
  color: #eb3812;
}
h1,
h2,
h3,
h4,
h5,
h6 {
/*  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;*/
    font-family: "circular-bold";
}
p {
  font-size: 16px;
  line-height: 1.5;
  margin-bottom: 20px;
}
.bg-primary {
  background-color: #F05F40;
}
.bg-dark {
  background-color: #222222;
  color: white;
}
.text-faded {
  color: rgba(255, 255, 255, 0.7);
}
section {
  padding: 100px 0;
}
aside {
  padding: 50px 0;
}
.no-padding {
  padding: 0;
}
.navbar-default.affix {
  position: fixed;
  top: 0;
  right: 0;
  left: 0;
  z-index: 1030;
}
.navbar-default {
  background-color: white;
  border-color: #e5e5e5;
  border-bottom: 1px solid #e5e5e5;
  --nav-icon-size: 24px;
  --nav-icon-hit: 24px;
  /*font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;*/
  font-family: "circular-std";
  -webkit-transition: all 0.35s;
  -moz-transition: all 0.35s;
  transition: all 0.35s;
}
.navbar-default.navbar {
  display: flex;
  padding: 0;
  --bs-navbar-padding-y: 0;
  --bs-navbar-padding-x: 0;
  min-height: 50px;
}
.navbar-default .nav-bar-inner {
  display: flex;
  align-items: center;
  width: 100%;
  min-height: 50px;
  padding: 0 16px;
  gap: 8px;
}
.navbar-default .nav-bar-start,
.navbar-default .nav-bar-end {
  display: flex;
  align-items: center;
  flex: 1 1 0;
  min-width: 0;
}
.navbar-default .nav-bar-start {
  justify-content: flex-start;
  gap: 12px;
}
.navbar-default .nav-bar-end {
  justify-content: flex-end;
}
.navbar-default .nav-bar-center {
  display: flex;
  align-items: center;
  justify-content: center;
  flex: 0 1 auto;
  min-width: 0;
  max-width: min(100%, 280px);
  gap: 4px;
}
.navbar-default img {
    display: inline-block;
    max-width: 100%;
    cursor: pointer;
}
.navbar-default .img_left {
    float: left;
}
.navbar-default .img_right {
    float: right;
}
.navbar-default .nav-bar-center .title-brand,
.navbar-default .nav-bar-center > a:not(.nav-photo-prev):not(.nav-photo-next) {
    font-family: 'circular-bold';
    font-size: 19px;
    font-weight: 700;
    color: rgba(0, 0, 0, .7);
    text-decoration: none;
    min-width: 0;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}
.navbar-default .nav-bar-center .title-brand:hover,
.navbar-default .nav-bar-center .title-brand:focus,
.navbar-default .nav-bar-center > a:not(.nav-photo-prev):not(.nav-photo-next):hover,
.navbar-default .nav-bar-center > a:not(.nav-photo-prev):not(.nav-photo-next):focus {
    color: #F05F40;
}
.navbar-default .nav-photo-prev.is-hidden,
.navbar-default .nav-photo-next.is-hidden {
    visibility: hidden;
    pointer-events: none;
}
.navbar-default .nav-photo-prev,
.navbar-default .nav-photo-next {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    flex-shrink: 0;
    width: var(--nav-icon-hit);
    height: var(--nav-icon-hit);
    color: rgba(0, 0, 0, .7);
    text-decoration: none;
}
.navbar-default .nav-photo-prev:hover,
.navbar-default .nav-photo-prev:focus,
.navbar-default .nav-photo-next:hover,
.navbar-default .nav-photo-next:focus {
    color: #F05F40;
}
.navbar-default .nav-bar-center .arrow {
    display: inline-block;
    width: var(--nav-icon-size);
    height: var(--nav-icon-size);
    vertical-align: top;
    border: none;
    background-size: calc(var(--nav-icon-size) * 0.5);
    background-position: center;
    background-repeat: no-repeat;
    cursor: pointer;
    margin-top: 0;
    opacity: .4;
}
.navbar-default .nav-bar-center .arrow:hover {
    opacity: .6;
}
.navbar-default .nav-bar-center .arrow.left {
    margin-right: 4px;
    background-image: url(../images/arrow.svg);
    transform: rotate(90deg);
}
.navbar-default .nav-bar-center .arrow.left:hover {
    background-image: url(../images/arrow_hover.svg);
    transform: rotate(90deg);
}
.navbar-default .nav-bar-center .arrow.right {
    margin-left: 4px;
    background-image: url(../images/arrow.svg);
    transform: rotate(-90deg);
}
.navbar-default .nav-bar-center .arrow.right:hover {
    background-image: url(../images/arrow_hover.svg);
    transform: rotate(-90deg);
}
.navbar-default .nav_cloudberry {
    display: block;
    background: url(../images/icon-cloudberry.svg) no-repeat center;
    background-size: var(--nav-icon-size);
    width: var(--nav-icon-hit);
    height: var(--nav-icon-hit);
    opacity: .6;
    flex-shrink: 0;
}
.navbar-default .nav_slideshow {
    display: block;
    background-image: url(../images/icon-slideshow.svg);
    background-repeat: no-repeat;
    background-position: center;
    background-size: var(--nav-icon-size);
    width: var(--nav-icon-hit);
    height: var(--nav-icon-hit);
    opacity: .6;
    flex-shrink: 0;
}

.navbar-default .nav_slideshow:not(.active):hover,
.navbar-default .nav_slideshow:not(.active):focus {
    background-image: url(../images/icon-slideshow_hover.svg);
    opacity: 1;
}

.navbar-default .nav_slideshow.active,
.navbar-default .nav_slideshow.active:hover,
.navbar-default .nav_slideshow.active:focus {
    background-image: url(../images/icon-slideshow_pause.svg);
    opacity: 1;
}
/* ... */

